# AA84-api

./: .gitignore  README.md  main.py  pyproject.toml  run.sh
app/api/: routes.py
app/api/endpoints/: franchises.py  items.py  users.py
app/core/: config.py  logging.py  middleware.py
app/models/: __init__.py  address.py  client.py  clients.py  configuration.py  franchise.py  item.py  order.py  order_type.py  orders.py  paiement.py  products.py  restaurant.py  restaurants.py  user.py  users.py
app/schemas/: __init__.py  address.py  client.py  item.py  order.py  order_type.py  paiement.py  restaurant.py  user.py
app/schemas/clients/: __init__.py  schemas.py
app/schemas/core/: __init__.py  franchise.py
app/schemas/orders/: __init__.py  schemas.py
app/schemas/products/: __init__.py  schemas.py
app/schemas/restaurants/: __init__.py  schemas.py
app/schemas/users/: __init__.py  schemas.py
